We have updated the title of our list of blog posts

--- a/blogging/templates/blogging/list.html
+++ b/blogging/templates/blogging/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Recent Posts</h1>
+    <h1>Recent Blog Posts added by users</h1>
     {% comment %} Here is where the query happens {% endcomment %}
     {% for post in posts %}
     <h2>
